--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
     </div>
 
     <div class="darkGrey" style="grid-column-end: span 3;">
-      <button onclick="im_show('s_settingsPage')" style="margin: 7px 2px;">Settings</button>
-
       <div id="d_userDetails">
         <img src="homeIcon.png" id="img_userImage" class="icon">
-        <p id="p_username" class="friendName"></p>
+        <p id="p_username" class="friendName" style="grid-row-end: 1;"></p>
         <p id="p_money" class="moneyDisplay">0</p>
       </div>
+
+      <button onclick="im_show('s_settingsPage')" style="margin: 7px 2px;">Settings</button>
     </div>
   </div>
 </section>
